# tyk-api

./: .gitignore  README.md  permissions.yaml.example  pyproject.toml  requirements.txt
src/: run.py
src/api/: __init__.py  base.py
src/api/dashboard/: apis.py  assets.py  certificates.py  identity_management_profile.py  keys.py  policies.py  usergroups.py  users.py  webhooks.py
src/api/dashboard_admin/: organizations.py  users.py
src/api/tyk/: __init__.py
src/errors/: base.py  syntax.py
src/generators/: __init__.py  identity_management_profile.py  organization.py  user.py  usergroup.py
src/generators/tyk/: user.py  usergroup.py
src/helpers/: syntax.py
src/models/: __init__.py
src/models/tyk/: __init__.py  user.py  usergroup.py
src/repositories/: __init__.py  apis.py  assets.py  base.py  certificates.py  keys.py  master_users.py  organizations.py  policies.py  usergroups.py  users.py  webhooks.py
src/settings/: __init__.py  identity_management_profile.py  syntax.py  tyk.py
tyk_api/src/api/: __init__.py  base.py
tyk_api/src/errors/: __init__.py  base.py  wrapper.py
tyk_api/src/generators/: __init__.py  identity_management_profile.py  organization.py  user.py  usergroup.py
tyk_api/src/helpers/: __init__.py  syntax.py
tyk_api/src/models/: __init__.py
tyk_api/src/repositories/: __init__.py  apis.py  applications.py  assets.py  base.py  certificates.py  keys.py  master_users.py  organizations.py  policies.py  usergroups.py  users.py  webhooks.py
tyk_api/src/services/: __init__.py  admin_usergroups.py  applications.py  basic_users.py  (+3 more)
(+45 files in other folders)
